--- a/variables/Jenkinsfile
+++ b/variables/Jenkinsfile
@@ -1,79 +1,58 @@
 pipeline {
-    agent any
+    agent {
+        node {
+            label 'AGENT-1'
+        }
+    }
 
     environment {
-        GREETING = 'Hello Jenkins'
-    }
-    options {
-        timeout(time: 1, unit: 'HOURS') 
-        disableConcurrentBuilds()
-    }
-    parameters {
-        choice(name: 'CHOICE', choices: ['init', 'plan', 'apply'], description: 'Pick something')
+        AWS_ACCESS_KEY_ID = credentials('aws-access-key-id')  // AWS Access Key from Jenkins credentials
+        AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')  // AWS Secret Key from Jenkins credentials
+        AWS_REGION = 'us-east-1'  // Specify the AWS region
     }
 
     stages {
-        stage('Init') {
+        stage('Checkout') {
             steps {
-                sh """
+                // Checkout the source code from the repository
+                git 'https://github.com/SAIKIRANN226/Terraform.git'  // Replace with your repository URL
+            }
+        }
+
+        stage('Terraform Init') {
+            steps {
+                script {
+                    // Initialize Terraform
+                    sh '''
                     cd variables
                     terraform init -reconfigure
-                """
+                    '''
+                }
             }
         }
-        stage('Plan') {
+
+        stage('Terraform Plan') {
             steps {
-                sh """
+                script {
+                    // Run Terraform plan to review the changes before applying
+                    sh '''
                     cd variables
                     terraform plan
-                """
-            }
-        }
-        stage('Deploy') {
-            when {
-                expression { 
-                    params.action == 'apply'
+                    '''
                 }
             }
-            input {
-                message "Should we continue?"
-                ok "Yes, we should."
-            }
+        }
+
+        stage('Terraform Apply') {
             steps {
-                sh """
+                script {
+                    // Apply Terraform configuration to create the EC2 instance
+                    sh '''
                     cd variables
                     terraform apply -auto-approve
-                """
-            }
-        }
-        stage('Destroy') {
-            when {
-                expression { 
-                    params.action == 'destroy'
+                    '''
                 }
             }
-            input {
-                message "Should we continue?"
-                ok "Yes, we should."
-            }
-            steps {
-                sh """
-                    cd variables
-                    terraform destroy -auto-approve
-                """
-            }
-        }
-    }
-    // post build
-    post { 
-        always { 
-            echo 'I will always say Hello again!'
-        }
-        failure { 
-            echo 'this runs when pipeline is failed, used generally to send some alerts'
-        }
-        success{
-            echo 'I will say Hello when pipeline is success'
         }
     }
 }
