Creating cicd for sg

--- a/variables/Jenkinsfile
+++ b/variables/Jenkinsfile
@@ -27,6 +27,8 @@ pipeline {
                     sh '''
                     cd variables
                     terraform plan
+                    terraform plan -out=planfile
+                    terraform apply planfile
                     '''
             }
         }
